[project]
name = "n2k"
version = "0.1.0"
description = "Library to communicate with NMEA2000 devices."
authors = [
    {name = "Finn Böger", email="finnboeger@googlemail.com"},
]
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.md"
requires-python = ">=3.7"

keywords = ["NMEA2000", "CAN"]

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "python-can>=4.5"
]

[project.optional-dependencies]
dev = [
    "black>=25.1",
    "setuptools>=78.1",
]
docs = [
    "sphinx>=8.2",
    "sphinx-autodoc-typehints>=3.1",
    "sphinx-rtd-theme>=3.0",
]

[project.urls]
homepage = "https://github.com/finnboeger/NMEA2000"
documentation = "https://github.com/finnboeger/NMEA2000"
repository = "https://github.com/finnboeger/NMEA2000"

[build-system]
requires = [
    "setuptools >= 78.1",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "docs/build",
]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
